--- a/contact.html
+++ b/contact.html
@@ -140,7 +140,7 @@
         </div>
         <div class="location border border-light">
             <h3>Ramallah</h3>
-            <p>rokab st,almanarah,Ramallah,palestine</p>
+            <p>Paris st,City cneter,Tulkarm,palestine</p>
             
         </div>
     </div>
