--- a/contact.html
+++ b/contact.html
@@ -139,7 +139,7 @@
             
         </div>
         <div class="location border border-light">
-            <h3>Ramallah</h3>
+            <h3>Tulkarm</h3>
             <p>Paris st,City cneter,Tulkarm,palestine</p>
             
         </div>
