--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <h2>Finding Your perfect shoes</h2>
                 <p class="mt-3">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
                   commodo consequat is aute irure.</p>
-                    <a type="button" href="shop.html" class="mt-4 btn">Shop now</a>
+                    <a href="shop.html" class="mt-4 btn">Shop now</a>
               </div>
               
               <div>
