changing th buttons

--- a/add_to_cart.html
+++ b/add_to_cart.html
@@ -203,7 +203,7 @@
             120$
           </div>
           <div class="col-12 mt-2">
-            <a href="checkout.html" type="button" class="check btn  text-uppercase font-size-md-1 font-size-lg-5">Proceed to checkout</a>
+            <a href="checkout.html" class="check btn  text-uppercase font-size-md-1 font-size-lg-5">Proceed to checkout</a>
         
           </div>
         </div>
