--- a/checkout.html
+++ b/checkout.html
@@ -221,7 +221,7 @@
                   <div class="payment-method  mt-3 p-3 border border-light">Cheque Payment</div>
                   <div class="payment-method  mt-3 mb-2 p-3 border border-light">Paypal</div>
                   <div class="send-button">
-                    <a href="Thank-you.html" type="button" traget="_blank" class="mt-5 btn btn-block" type="submit">Place order</a>
+                    <a href="Thank-you.html"  traget="_blank" class="mt-5 btn btn-block" type="submit">Place order</a>
                 </div>
                 </div>
                   
