--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
                 <p style="font-size: 20px;">By <span style="color:rgb(190, 4, 190)">Mahdi Alsalem</span> &#183;   June 15 2021</p>
                 <p class="mt-2">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
                   commodo consequat is aute irure.</p>
-                    <a type="button" href="shop.html" class="mt-1 btn">Shop now</a>
+                    <a href="shop.html" class="mt-1 btn">Shop now</a>
               </div>
               
               <div>
