--- a/single_product.html
+++ b/single_product.html
@@ -132,7 +132,7 @@
             <button class="plus">+</button>
         </div>
           <div>
-          <a type="button" href="add_to_cart.html" class="mt-5 btn">Add To Cart</a>
+          <a  href="add_to_cart.html" class="mt-5 btn">Add To Cart</a>
         </div>
 
         </div>
