--- a/shop.html
+++ b/shop.html
@@ -85,18 +85,18 @@
     </div>
     <!--title-->
     <!--start of main section-->
-    <div class="main container-fluid mt-5">
+    <div class="main container-fluid mt-3">
       <div class="row">
       <!--head-->
 
-        <div class="main-head ml-lg-1   order-lg-2 col-xl-9 col-lg-8 col-12   container-fluid">
+        <div class="main-head ml-lg-1  order-lg-2 col-xl-9 col-lg-8 col-12 container-fluid">
          <div class="row">
-          <div class="head-title col-lg-8 col-md-6 col-sm-5 col-5 mt-5">
+          <div class="head-title col-lg-8 col-md-6 col-sm-5 col-7 mt-5">
 
             <h4>Shop all</h4>
           </div>
-          <div class="head-menus  col-lg-4 col-md-5 col-sm-5 col-5 ml-sm-4 ml-md-0 mt-4 d-flex flex-row  justify-content-center">
-            <div class="ml-5">
+          <div class="head-menus  col-lg-4 col-md-5 col-sm-5 col-7 ml-sm-4 ml-md-0 mt-4 d-flex flex-row  justify-content-center">
+            <div class="ml-4 ">
               <div class="dropdown">
                 <button class="btn text-upercase dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
                   data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -135,21 +135,21 @@
       <!--head-->
   <!--categories filter-->
 
-  <div class="filter-categoreis mt-5 ml-sm-4 ml-lg-0 order-lg-1  col-xl-2 col-lg-3  col-sm-5 col-11 ml-4">
+  <div class="filter-categoreis mt-5 ml-sm-4 ml-lg-0 order-lg-1  col-xl-2 col-lg-3  col-sm-5 col-12">
               <h6 class="text-uppercase font-bold">Categories</h6>
                       <div class="row">
-                          <div class="type col-7 col-sm-6 col-xl-5 mt-3">Women</div>
+                          <div class="type col-6 col-sm-6 col-xl-5 mt-3">Women</div>
                           <div class="quantity col-3 mt-3 ml-5">(2462)</div>
-                          <div class="type col-7 col-sm-6 col-xl-5 mt-3">Children</div>
+                          <div class="type col-6 col-sm-6 col-xl-5 mt-3">Children</div>
                           <div class="quantity col-3 mt-3 ml-5">(2320)</div>
-                          <div class="type col-7 col-sm-6 col-xl-5 mt-3">Men</div>
+                          <div class="type col-6 col-sm-6 col-xl-5 mt-3">Men</div>
                           <div class="quantity col-3 mt-3 ml-5">(2339)</div>
           </div>
       </div>
     <!--categories filter-->
 
       <!--other filters-->
-      <div class="other-filters mt-lg-3 mt-sm-5 mt-3 ml-sm-5 ml-lg-0 order-lg-3 col-xl-2 col-lg-3 col-sm-5 col-11 ml-4">
+      <div class="other-filters mt-lg-3 mt-sm-5 mt-3 ml-sm-5 ml-lg-0 order-lg-3 col-xl-2 col-lg-3 col-sm-5 col-12">
           <h6 class="text-uppercase font-bold">Filter By:</h6>
   
               <div class="row">
@@ -519,6 +519,8 @@
    </div>
    </div>
    </div>
+       <!--end of main section-->
+
    <hr>
    <!--categories-->
    <section class="categories">
@@ -571,7 +573,7 @@
         
           </div>
 </section>
-    <!--end of main section-->
+<!--categories-->
     <hr>
     <!--start of footer-->
     <footer>
