--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       
         <ul class="bottom-nav nav justify-content-center flex-xs-column flex-md-row py-3">
             <li class="nav-item">
-                <a class="active nav-link" href="Home.html">Home</a>
+                <a class="active nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="about.html">About</a>
