--- a/add_to_cart.html
+++ b/add_to_cart.html
@@ -230,7 +230,7 @@
 
   <!--Footer-->
   <footer>
-    <div class="container-fluid">
+    <div class="container">
       <div class="row">
         <!--navigations-->
         <div class="nav col-lg-6 col-md-8 col-sm-12 col-xs-12 mt-3">
