--- a/contact.html
+++ b/contact.html
@@ -153,7 +153,7 @@
     <hr>
   <!--start of footer-->
   <footer>
-    <div class="container-fluid">
+    <div class="container">
       <div class="row">
         <!--navigations-->
         <div class="nav col-lg-6 col-md-8 col-sm-12 col-xs-12 mt-3">
@@ -263,7 +263,6 @@
       </div>
     </div>
   </footer>
-
   <!--end of footer-->
 
 </body>
