--- a/index.html
+++ b/index.html
@@ -304,116 +304,116 @@
 <hr>
 <!--start of footer-->
 <footer>
-    <div class="container-fluid">
-      <div class="row">
-        <!--navigations-->
-        <div class="nav col-lg-6 col-md-8 col-sm-12 col-xs-12 mt-3">
-          <div class="container-fluid">
-            <h5>Navigations</h5>
+  <div class="container">
+    <div class="row">
+      <!--navigations-->
+      <div class="nav col-lg-6 col-md-8 col-sm-12 col-xs-12 mt-3">
+        <div class="container-fluid">
+          <h5>Navigations</h5>
 
-            <div class="row">
-              <div class="col-4">
-                <ul class="list-unstyled">
-                  <li>
-                    <a href="#!">Sell online</a>
-                  </li>
-                  <li>
-                    <a href="#!">Features</a>
-                  </li>
-                  <li>
-                    <a href="#!">Shopping Cart</a>
-                  </li>
-                  <li>
-                    <a href="#!">Builder Store</a>
-                  </li>
-                </ul>
-              </div>
-              <div class="col-4">
-                <ul class="list-unstyled">
-                  <li>
-                    <a href="#!">Mobile Commerce</a>
-                  </li>
-                  <li>
-                    <a href="#!">Drop-shopping</a>
-                  </li>
-                  <li>
-                    <a href="#!">Website Development</a>
-                  </li>
-                </ul>
-              </div>
-              <div class="col-4">
-                <ul class="list-unstyled">
-                  <li>
-                    <a href="#!">Point of sale </a>
-                  </li>
-                  <li>
-                    <a href="#!">Software</a>
-                  </li>
-                  <li>
-                    <a href="#!">Hardware</a>
-                  </li>
-                </ul>
-              </div>
+          <div class="row">
+            <div class="col-4">
+              <ul class="list-unstyled">
+                <li>
+                  <a href="#!">Sell online</a>
+                </li>
+                <li>
+                  <a href="#!">Features</a>
+                </li>
+                <li>
+                  <a href="#!">Shopping Cart</a>
+                </li>
+                <li>
+                  <a href="#!">Builder Store</a>
+                </li>
+              </ul>
+            </div>
+            <div class="col-4">
+              <ul class="list-unstyled">
+                <li>
+                  <a href="#!">Mobile Commerce</a>
+                </li>
+                <li>
+                  <a href="#!">Drop-shopping</a>
+                </li>
+                <li>
+                  <a href="#!">Website Development</a>
+                </li>
+              </ul>
+            </div>
+            <div class="col-4">
+              <ul class="list-unstyled">
+                <li>
+                  <a href="#!">Point of sale </a>
+                </li>
+                <li>
+                  <a href="#!">Software</a>
+                </li>
+                <li>
+                  <a href="#!">Hardware</a>
+                </li>
+              </ul>
             </div>
           </div>
         </div>
-        <!--navigations-->
-        <!--Promo-->
-        <div class="promo col-lg-3 col-md-4 col-sm-6 col-xs-12 mt-3">
-          <h5>Promo</h5>
-          <ul class="list-unstyled">
-            <li>
-              <img src="imgs/footer.jpg" class="footer-img" alt="shoes">
-            </li>
-            <li>
-              <a href="#">Finding your perfect shoes</a>
-              <p>promo form nuwary 15-25,2019</p>
-            </li>
-
-          </ul>
-        </div>
-        <!--promo-->
-        <!--contact-->
-        <div class="contact col-lg-3 col-md-6  col-sm-6 col-xs-12 mt-3">
-          <h5>Contact info</h5>
-          <ul class="list-unstyled">
-            <li>
-              <p><i class="fa fa-map-marker-alt mr-3"></i>16 St.Birzeit,Ramallah,Palestine</p>
-            </li>
-            <li>
-              <p style="color:grey"><i class="fa fa-phone mr-3"></i>0595580244</p>
-            </li>
-            <li>
-              <p><i class="fa fa-envelope mr-3"></i>Alsalem.mahdi94@gmail.com</p>
-            </li>
-          </ul>
-        </div>
-        <!--contact-->
-        <!--subscribe-->
-        <div class="subscribe col-lg-5 col-xl-3 col-md-6 col-sm-8 col-xs-12 col-sm-10 mt-3">
-          <h5>Subscribe</h5>
-          <ul class="list-unstyled">
-
-            <li>
-              <div class="input-group mb-3">
-                <input type="email" class="em form-control" placeholder="Email">
-                <div class="input-group-append">
-                  <button class="btn1" type="button">send</button>
-                </div>
-              </div>
-            </li>
-          </ul>
-        </div>
-        <!--subscribe-->
-        <!--copyright-->
-        <div class="footer-copyright text-center col-12 py-5">Copyright ©2021 All rights reserved | this template is
-          made with <i class="fa fa-heart"></i> by Mahdi Alsalem.
-        </div>
-        <!--copyright-->
-
       </div>
+      <!--navigations-->
+      <!--Promo-->
+      <div class="promo col-lg-3 col-md-4 col-sm-6 col-xs-12 mt-3">
+        <h5>Promo</h5>
+        <ul class="list-unstyled">
+          <li>
+            <img src="imgs/footer.jpg" class="footer-img" alt="shoes">
+          </li>
+          <li>
+            <a href="#">Finding your perfect shoes</a>
+            <p>promo form nuwary 15-25,2019</p>
+          </li>
+
+        </ul>
+      </div>
+      <!--promo-->
+      <!--contact-->
+      <div class="contact col-lg-3 col-md-6  col-sm-6 col-xs-12 mt-3">
+        <h5>Contact info</h5>
+        <ul class="list-unstyled">
+          <li>
+            <p><i class="fa fa-map-marker-alt mr-3"></i>16 St.Birzeit,Ramallah,Palestine</p>
+          </li>
+          <li>
+            <p style="color:grey"><i class="fa fa-phone mr-3"></i>0595580244</p>
+          </li>
+          <li>
+            <p><i class="fa fa-envelope mr-3"></i>Alsalem.mahdi94@gmail.com</p>
+          </li>
+        </ul>
+      </div>
+      <!--contact-->
+      <!--subscribe-->
+      <div class="subscribe col-lg-5 col-xl-3 col-md-6 col-sm-8 col-xs-12 col-sm-10 mt-3">
+        <h5>Subscribe</h5>
+        <ul class="list-unstyled">
+
+          <li>
+            <div class="input-group mb-3">
+              <input type="email" class="em form-control" placeholder="Email">
+              <div class="input-group-append">
+                <button class="btn1" type="button">send</button>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </div>
+      <!--subscribe-->
+      <!--copyright-->
+      <div class="footer-copyright text-center col-12 py-5">Copyright ©2021 All rights reserved | this template is
+        made with <i class="fa fa-heart"></i> by Mahdi Alsalem.
+      </div>
+      <!--copyright-->
+
     </div>
-  </footer>
+  </div>
+</footer>
 <!--end of footer-->
 </body>
 
