--- a/about.html
+++ b/about.html
@@ -228,7 +228,7 @@
   <hr>
   <!--start of footer-->
   <footer>
-    <div class="container-fluid">
+    <div class="container">
       <div class="row">
         <!--navigations-->
         <div class="nav col-lg-6 col-md-8 col-sm-12 col-xs-12 mt-3">
