--- a/single_product.html
+++ b/single_product.html
@@ -228,7 +228,7 @@
 <!--end of featured products-->
   <!--start of footer-->
   <footer>
-    <div class="container-fluid">
+    <div class="container">
       <div class="row">
         <!--navigations-->
         <div class="nav col-lg-6 col-md-8 col-sm-12 col-xs-12 mt-3">
@@ -337,7 +337,8 @@
 
       </div>
     </div>
-  </footer><!--end of footer-->
+  </footer>
+  <!--end of footer-->
 
 </body>
 
