--- a/about.html
+++ b/about.html
@@ -92,10 +92,10 @@
     <div class="container-fluid">
       <div class="row justify-content-between">
 
-        <div class=" col-lg-6 col-xs-12 mt-4 order-xs-2 order-lg-1">
+        <div class=" col-lg-6 col-xs-12 mt-4">
           <img src="imgs/blog_1.jpg" class="header-img" alt="sale">
         </div>
-        <div class="header-body order-xs-1 order-lg-2 align-items-center col-lg-5  col-xs-12 mt-2">
+        <div class="header-body  align-items-center col-lg-5  col-xs-12 mt-2">
           <hr>
           <h2>How we started</h2>
           <p class="mt-2">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
@@ -122,38 +122,38 @@
   <!--end of header-->
   <!--start of services section-->
   <section class="services">
-    <div class=" container-fluid">
-      <div class="row align-items-center justify-content-between">
-        <div class="col-xs-12 col-md-6 col-lg-4 mt-4">
-          <span class="mr-3"><i class="fa fa-truck"></i> </span>
-          <h2> free shipping</h2>
-          <p class="mt-2">Enim ad minim veniam, quis nostrud exercitation ullamco
-            Enim ad minim veniam, quis nostrud exercitation ullamco
-            Enim ad minim veniam, quis nostrud exercitation ullamco
-          </p>
-
+    <div class="container"> 
+        <div class="row align-items-center justify-content-between">
+          <div class="col-xs-12 col-md-6 col-lg-4 mt-5">
+            <span class="mr-3"><i class="fa fa-truck"></i> </span>
+            <h2> free shipping</h2>
+            <p class="mt-2">Enim ad minim veniam, quis nostrud exercitation ullamco
+              Enim ad minim veniam, quis nostrud exercitation ullamco
+              Enim ad minim veniam, quis nostrud exercitation ullamco
+            </p>
+  
         </div>
-        <div class="col-xs-12 col-md-6 col-lg-4 mt-4">
-          <span class="mr-3"><i class="fa fa-redo"></i> </span>
-          <h2> free Returns</h2>
-          <p class="mt-2">Enim ad minim veniam, quis nostrud exercitation ullamco
-            Enim ad minim veniam, quis nostrud exercitation ullamco
-            Enim ad minim veniam, quis nostrud exercitation ullamco
-          </p>
-
-        </div>
-        <div class="col-xs-12 col-md-6 col-lg-4 mt-4">
-          <span><i class="fa fa-question-circle"></i> </span>
-          <h2> Customer support</h2>
-          <p class="mt-2">Enim ad minim veniam, quis nostrud exercitation ullamco
-            Enim ad minim veniam, quis nostrud exercitation ullamco
-            Enim ad minim veniam, quis nostrud exercitation ullamco
-          </p>
-
+          <div class="col-xs-12 col-md-6 col-lg-4 mt-5">
+            <span class="mr-3"><i class="fa fa-redo"></i> </span>
+            <h2> free Returns</h2>
+            <p class="mt-2">Enim ad minim veniam, quis nostrud exercitation ullamco
+              Enim ad minim veniam, quis nostrud exercitation ullamco
+              Enim ad minim veniam, quis nostrud exercitation ullamco
+            </p>
+  
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4 mt-5">
+            <span><i class="fa fa-question-circle"></i> </span>
+            <h2> Customer support</h2>
+            <p class="mt-2">Enim ad minim veniam, quis nostrud exercitation ullamco
+              Enim ad minim veniam, quis nostrud exercitation ullamco
+              Enim ad minim veniam, quis nostrud exercitation ullamco
+            </p>
+  
+          </div>
         </div>
       </div>
-    </div>
-  </section>
+</section>
   <!--end of services section-->
   <hr>
   <!--start of team section-->
