--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
 </section>
 <!--end of featured products-->
 <section class="sale">
-    <div class="container-fluid">
+    <div class="container">
         <div class="row justify-content-between">
           <div class="title col-12 text-center mt-3">
             <hr>
