--- a/contact.html
+++ b/contact.html
@@ -28,12 +28,12 @@
 
     <nav>
         <!--start of top nav-->
-        <div class="top-nav mb-3 py-4 navbar-expand-lg text-center container-fluid mt-4">
-            <div class="row align-items-center ml-1">
+        <div class="top-nav mb-3 py-4 text-center container-fluid mt-4">
+            <div class="row align-items-center">
                 <div class="left-top col-4">
                     <form class="form-inline">
                         <i class="fas fa-search ml-auto mt-2" aria-hidden="true"></i>
-                        <input class="search form-control ml-1 w-75 w-xs-50" type="text" placeholder="Search"
+                        <input class="search form-control  w-75" type="text" placeholder="Search"
                           aria-label="Search">
                       </form>
                     
@@ -91,10 +91,10 @@
         <div class="row">
             <div class="col-xs-12 col-md-7">
                 <p class="h4">Get in Touch</p>
-            <form class="contact-us  border border-light p-5" action="#!">
+            <form class="contact-us  border border-light p-3" action="#!">
     <!-- Name -->
     <div class="d-flex flex-row">
-        <label  class="w-50" for="first-name">First name <span>*</span></label>
+        <label  class="w-50 " for="first-name">First name <span>*</span></label>
         <label class="w-50 ml-4"  for="last-name">Last name <span>*</span></label>
 </div>
 <div class="d-flex flex-row">
