--- a/checkout.html
+++ b/checkout.html
@@ -29,57 +29,55 @@
     <nav>
       <!--start of top nav-->
       <div class="top-nav mb-3 py-4 navbar-expand-lg text-center container-fluid mt-4">
-          <div class="row align-items-center ml-1">
-              <div class="left-top col-4">
-                  <form class="form-inline">
-                      <i class="fas fa-search ml-auto mt-2" aria-hidden="true"></i>
-                      <input class="search form-control ml-1 w-75 w-xs-50" type="text" placeholder="Search"
-                        aria-label="Search">
-                    </form>
-                  
-              </div>
-              <div class="middle-top col-4">
-                  <h3>Mahdi Alsalem</h3>
-              </div>
-              <div class="right-top col-4">
-                  <a> <i class="fa fa-user ml-sm-5" aria-hidden="true"></i></a>
-                  <a> <i class="far fa-heart ml-sm-2" aria-hidden="true"></i></a>
-                  <a> <i class="fa fa-shopping-cart ml-sm-2" aria-hidden="true"></i></a>
-
-              </div>
+        <div class="row align-items-center ml-1">
+          <div class="left-top col-4">
+            <form class="form-inline">
+              <i class="fas fa-search ml-auto mt-2" aria-hidden="true"></i>
+              <input class="search form-control ml-1 w-75 w-xs-50" type="text" placeholder="Search" aria-label="Search">
+            </form>
+  
           </div>
+          <div class="middle-top col-4">
+            <h3>Mahdi Alsalem</h3>
+          </div>
+          <div class="right-top col-4">
+            <a> <i class="fa fa-user ml-sm-5" aria-hidden="true"></i></a>
+            <a> <i class="far fa-heart ml-sm-2" aria-hidden="true"></i></a>
+            <a> <i class="fa fa-shopping-cart ml-sm-2" aria-hidden="true"></i></a>
+  
+          </div>
+        </div>
       </div>
-
+  
       <!--end of top nav-->
       <hr>
       <!--start of bottom nav-->
-    
+  
       <ul class="bottom-nav nav justify-content-center flex-xs-column flex-md-row py-3">
-          <li class="nav-item">
-              <a class="active nav-link" href="index.html">Home</a>
-          </li>
-          <li class="nav-item">
-              <a class="nav-link" href="about.html">About</a>
-          </li>
-          <li class="nav-item">
-              <a class="nav-link" href="shop.html">shop</a>
-          </li>
-          <li class="nav-item">
-              <a class="nav-link" href="#!">catalougue</a>
-          </li>
-          <li class="nav-item">
-              <a class="nav-link" href="#!">new arriavals</a>
-          </li>
-
-          <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a>
-          </li>
+        <li class="nav-item">
+          <a class="nav-link" href="index.html">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="active nav-link" href="about.html">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="shop.html">shop</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#!">catalougue</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#!">new arriavals</a>
+        </li>
+  
+        <li class="nav-item">
+          <a class="nav-link" href="contact.html">Contact</a>
+        </li>
       </ul>
       <!--end of bottom nav-->
-      <hr>
-
-
-  </nav>
+  
+  
+    </nav>
     <!--end of nav-->
           <!--title-->
           <div class="title">
