--- a/about.html
+++ b/about.html
@@ -89,7 +89,7 @@
 
   <!--Start of header-->
   <header>
-    <div class="container-fluid">
+    <div class="container">
       <div class="row justify-content-between">
 
         <div class=" col-lg-6 col-xs-12 mt-4">
@@ -159,6 +159,7 @@
   <!--start of team section-->
   <!-- Section: Team v.1 -->
 <section class="team-section text-center my-5">
+  <div class="container">
 <hr>
   <!-- Section heading -->
   <h2 class="h1-responsive font-weight-bold mb-5">The Team</h2>
@@ -221,6 +222,7 @@
 
   </div>
   <!-- Grid row -->
+</div>
 
 
 </section>
@@ -339,7 +341,7 @@
     </div>
   </footer>
   <!--end of footer-->
-</body>
+  <script src="main.js"></script>
 
 </html>
 <!-- End your project here-->
