--- a/shop.html
+++ b/shop.html
@@ -688,7 +688,7 @@
         </div>
       </footer>
       <!--end of footer-->
-</body>
+      <script src="main.js"></script>
 
 </html>
 <!-- End your project here-->
