--- a/add_to_cart.html
+++ b/add_to_cart.html
@@ -54,10 +54,10 @@
 
     <ul class="bottom-nav nav justify-content-center flex-xs-column flex-md-row py-3">
       <li class="nav-item">
-        <a class="nav-link" href="index.html">Home</a>
+        <a class="nav-link active" href="index.html">Home</a>
       </li>
       <li class="nav-item">
-        <a class="active nav-link" href="about.html">About</a>
+        <a class="nav-link" href="about.html">About</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="shop.html">shop</a>
