--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
             <a> <i class="fa fa-user ml-sm-5" aria-hidden="true"></i></a>
             <a> <i class="far fa-heart ml-sm-2" aria-hidden="true"></i></a>
             <a> <i class="fa fa-shopping-cart ml-sm-2" aria-hidden="true"></i></a>
-  
           </div>
+         
         </div>
       </div>
   
@@ -80,13 +80,13 @@
     <!--end of nav-->
     <!--Start of header-->
     <header>
-        <div class="container">
+        <div class="container mt-3">
             <div class="row justify-content-between align-items-center">
                 <div class=" col-lg-7 col-xs-12">
                     <img src="imgs/header1.png"  class="header-img" alt="">
                   </div>
               <div class="header-body mt-5 ml-lg-4  col-lg-4 col-xs-12">
-                <h2>Finding Your perfect shoes</h2>
+                <h2>Find your perfect style</h2>
                 <p class="mt-3">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
                   commodo consequat is aute irure.</p>
                     <a href="shop.html" class="mt-4 btn">Shop now</a>
@@ -190,7 +190,7 @@
   </section>
         <!--end of categories section-->
         <!--start of featured products-->
-<section class="featured">
+<section class="featured py-3">
     <div class="container">
         <div class="row justify-content-between align-items-center">
           <div class="title col-12 text-center">
